# mori-canvas

./: .gitignore  README.md  package-lock.json  package.json  render.yaml  tsconfig.json  vite.config.ts
client/: index.html
client/public/: manifest.webmanifest  sw.js
client/src/: App.tsx  main.tsx  styles.css  types.d.ts
deploy/: foss-whiteboard-sync.service  nginx.conf.example
docs/: ANNOUNCE.md  BACKLOG.md  index.html
prompts/: card-gate.md  dedup.md  distill.md  gate.md  glossary.md  topicshift.md
rust-sync-spike/: .gitignore  Cargo.toml
rust-sync-spike/src/: main.rs
scripts/: setup-whisper-linux.sh
server/: agent.ts  board-types.ts  bot.ts  llm.ts  stt.ts  sync-server.ts
server-rs/: Cargo.toml  build.rs
server-rs/src/: agent.rs  apply.rs  board_types.rs  glossary.rs  harness.rs  layout.rs  lib.rs  llm.rs  main.rs  store.rs  stt.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
