[package]
name = "mori-canvas-app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
mori-canvas-server = { path = "../server-rs" }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde_json = "1"
